Finished Train Trust type